# mars_telemetry_debugger

./: .gitignore  pyproject.toml  requirements.txt
app/api/: routes.py  server.py
app/generator/: fault_injector.py  generator.py  stream.py
app/models/: telemetry.py
app/parser/: anomaly_detector.py  parser.py  result.py
app/ui/terminal/: dashboard.py
app/ui/web/: dashboard.py
app/ui/web/pages/: mars_map.py  packet_stream.py
scripts/: run_server.py  run_terminal_ui.py  test_faults.py  test_faulty_stream.py  test_generator.py  test_packet.py  test_parser.py  test_stream.py  test_stream_w_parser.py  ws_test.html
tests/unit/: test_parser.py
